Fix heading link overlapping with multi-line headings

--- a/website/styles/help.css
+++ b/website/styles/help.css
@@ -160,10 +160,10 @@ h4:hover > a.link,
 	font-size: 0.7em;
 	margin-left: 0.3em;
 	position: absolute; /*do not actually take up any space, to prevent layout shifts*/
-	top: 0.2em;
+	margin-top: 0.2em;
 }
 
 /* h2 needs a bit more offset */
 h2:hover > a.link {
-	top: 0.3em;
+	margin-top: 0.3em;
 }
